[package]
name = "lsamp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt", "time", "io-std", "io-util"] }
duration-str = "0.3.9"
