[package]
name = "lsamp"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Alex Genco <alexgenco@gmail.com>"]
description = "Sample stdin at a fixed rate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
